--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -8,16 +8,94 @@
   tools:context=".controller.HistoryFragment">
 
   <TextView
-    android:id="@+id/text_notifications"
-    android:layout_width="match_parent"
+    android:id="@+id/code_length_label"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"
-    android:textAlignment="center"
-    android:textSize="20sp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
+    android:layout_margin="@dimen/half_static_spacing"
+    android:text="@string/code_length_label"
+    android:textStyle="bold"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintStart_toStartOf="@id/code_length"/>
+
+  <TextView
+    android:id="@+id/pool_size_label"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/half_static_spacing"
+    android:textStyle="bold"
+    android:text="@string/pool_size_label"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintStart_toStartOf="@id/pool_size"/>
+
+  <SeekBar
+    android:id="@+id/code_length"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/half_control_spacing"
+    android:max="@integer/code_length_pref_max"
+    android:min="@integer/code_length_pref_min"
+    android:progress="@integer/code_length_pref_default"
+    app:layout_constraintTop_toBottomOf="@id/code_length_label"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"/>
+    app:layout_constraintEnd_toStartOf="@id/code_length_display"
+    app:layout_constraintHorizontal_weight="4"/>
+
+  <TextView
+    android:id="@+id/code_length_display"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/half_static_spacing"
+    app:layout_constraintTop_toTopOf="@id/code_length"
+    app:layout_constraintBottom_toBottomOf="@id/code_length"
+    app:layout_constraintStart_toEndOf="@id/code_length"
+    app:layout_constraintEnd_toStartOf="@id/pool_size"
+    app:layout_constraintHorizontal_weight="1"
+    tools:text="3"/>
+
+  <SeekBar
+    android:id="@+id/pool_size"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/half_control_spacing"
+    android:max="@integer/pool_size_pref_max"
+    android:min="@integer/pool_size_pref_min"
+    android:progress="@integer/pool_size_pref_default"
+    app:layout_constraintTop_toBottomOf="@id/pool_size_label"
+    app:layout_constraintEnd_toStartOf="@id/pool_size_display"
+    app:layout_constraintStart_toEndOf="@id/code_length_display"
+    app:layout_constraintHorizontal_weight="4"/>
+
+  <TextView
+    android:id="@+id/pool_size_display"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/half_static_spacing"
+    app:layout_constraintTop_toTopOf="@id/pool_size"
+    app:layout_constraintBottom_toBottomOf="@id/pool_size"
+    app:layout_constraintStart_toEndOf="@id/pool_size"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_weight="1"
+    tools:text="4"/>
+
+  <androidx.constraintlayout.widget.Barrier
+    android:id="@+id/controls_boundary"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:barrierDirection="bottom"
+    app:constraint_referenced_ids="code_length, code_length_display, pool_size, pool_size_display"/>
+
+  <androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/history"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    android:layout_marginTop="@dimen/half_control_spacing"
+    android:orientation="vertical"
+    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+    app:spanCount="1"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/controls_boundary"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
